@@ -1,3 +1,8 @@
+2009-01-16  Andreas Kupries  <andreask@activestate.com>
+
+	* win/tkWinWm.c (WmAttributesCmd): Fix a single use of
+	SetWindowLongPtr which was not properly ifdef'd.
+
 2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tkPort.h: remove the ../unix/ header dir as the build
